--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
 
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation "com.android.support:appcompat-v7:$SUPPORT_VERSION"
+    implementation "com.android.support:recyclerview-v7:$SUPPORT_VERSION"
+    implementation "com.android.support:design:$SUPPORT_VERSION"
 
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    implementation "android.arch.persistence.room:runtime:$ARCH_VERSION"
+    annotationProcessor "android.arch.persistence.room:compiler:$ARCH_VERSION"
 
     implementation 'androidx.core:core-ktx:0.1'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.persistence.room:testing:$ARCH_VERSION"
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    testImplementation "android.arch.persistence.room:testing:1.0.0"
 }
