--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@
 buildscript {
     ext.KOTLIN_VERSION = '1.2.41'
     ext.SUPPORT_VERSION = '27.1.1'
-    ext.ARCH_VERSION = '1.0.0'
+    ext.LIFECYCLE_VERSION = '1.1.1'
+    ext.ROOM_VERSION = '1.0.0'
     repositories {
         google()
         jcenter()
